--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 </head>
+
+<!-- HTML code goes in here -->
 <body>
   
     <p>Pablo is stupid</p>
