--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
   <head>
-    <script src="http://www.webglearth.com/v2/api.js"></script>
-    <script>
-      function initialize() {
-        var earth = new WE.map('earth_div');
-        WE.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-          attribution: '© OpenStreetMap contributors'
-        }).addTo(earth);
-      }
-    </script>
-    <style>
-      html, body{padding: 0; margin: 0;}
-      #earth_div{top: 0; right: 0; bottom: 0; left: 0; position: absolute !important;}
-    </style>
-    <title>WebGL Earth API: Hello World</title>
+    <meta charset="utf-8">
+    <title>Global Memology</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    
   </head>
+
+  <!-- HTML code goes here -->
   <body onload="initialize()">
     <div id="earth_div"></div>
   </body>
+
+  <!-- JavaScript code goes here -->
+  <script src="http://www.webglearth.com/v2/api.js"></script>
+  <script>
+    function initialize() {
+      var earth = new WE.map('earth_div');
+      WE.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+        attribution: '© OpenStreetMap contributors'
+      }).addTo(earth);
+    }
+  </script>
+
 </html>
 
