--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    
   </head>
 
   <!-- HTML code goes here -->
@@ -24,6 +23,23 @@
       }).addTo(earth);
     }
   </script>
+
+<style>
+
+    html, body {
+    padding: 0;
+    margin: 0;
+    }
+
+    #earth_div {
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        position: absolute !important;
+    }
+
+</style>
 
 </html>
 
