--- a/index.html
+++ b/index.html
@@ -1,54 +1,55 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Global Memology</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <title>Global Memology</title>
+        <base href="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+    </head>
 
-  <!-- HTML code goes here -->
-  <body onload="initialize()">
-    <div id="earth_div"></div>
-  </body>
+    <!-- HTML code goes here -->
+    <body onload="initialize()">
+        <div id="earth_div"></div>
+    </body>
 
-  <!-- JavaScript code goes here -->
-  <script src="http://www.webglearth.com/v2/api.js"></script>
-  <script>
-    function initialize() {
-      var earth = new WE.map('earth_div');
-      WE.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-        attribution: '© OpenStreetMap contributors'
-      }).addTo(earth);
-      
-      // Start a simple rotation animation
-      var before = null;
-        requestAnimationFrame(function animate(now) {
-            var c = earth.getPosition();
-            var elapsed = before? now - before: 0;
-            before = now;
-            earth.setCenter([c[0], c[1] + 0.1*(elapsed/30)]);
-            requestAnimationFrame(animate);
-        });
-    }
-  </script>
+    <!-- JavaScript code goes here -->
+    <script src="http://www.webglearth.com/v2/api.js"></script>
+    <script>
+        function initialize() {
+        var earth = new WE.map('earth_div');
+        WE.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+            attribution: '© OpenStreetMap contributors'
+        }).addTo(earth);
+        
+        // Start a simple rotation animation
+        var before = null;
+            requestAnimationFrame(function animate(now) {
+                var c = earth.getPosition();
+                var elapsed = before? now - before: 0;
+                before = now;
+                earth.setCenter([c[0], c[1] + 0.1*(elapsed/30)]);
+                requestAnimationFrame(animate);
+            });
+        }
+    </script>
 
-<style>
+    <!-- CSS code goes here -->
+    <style>
 
-    html, body {
-    padding: 0;
-    margin: 0;
-    }
+        html, body {
+            padding: 0;
+            margin: 0;
+        }
 
-    #earth_div {
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        position: absolute !important;
-    }
+        #earth_div {
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            position: absolute !important;
+        }
 
-</style>
+    </style>
 
 </html>
