--- a/index.html
+++ b/index.html
@@ -9,20 +9,10 @@
     
   </head>
 
-<<<<<<< Updated upstream
   <!-- HTML code goes here -->
   <body onload="initialize()">
     <div id="earth_div"></div>
   </body>
-=======
-    <!-- HTML code goes here -->
-    <body onload="initialize()">
-        <div id="testing">
-            hello
-        </div>
-        <div id="earth_div"></div>
-    </body>
->>>>>>> Stashed changes
 
   <!-- JavaScript code goes here -->
   <script src="http://www.webglearth.com/v2/api.js"></script>
@@ -52,5 +42,10 @@
         });
       }
     </script>
+
+    <style>
+      html, body{padding: 0; margin: 0;}
+      #earth_div{ top: 0; right: 0; bottom: 0; left: 0; position: absolute !important;}
+    </style>
 
 </html>
