--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- HTML code goes here -->
     <body onload="initialize()">
-        <div id="testing">
-            hello
+        <div id="title">
+            The Map of Memes
         </div>
         <div id="earth_div"></div>
     </body>
