--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
     <!-- HTML code goes here -->
     <body onload="initialize()">
-        <div id="title">
-            The Map of Memes
-        </div>
+        <div id="logo"></div>
         <div id="earth_div"></div>
     </body>
 
