--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <!-- HTML code goes here -->
     <body onload="initialize()">
-        <div id="logo"></div>
+        <div id="logo">
+            <img class="center-fit" src="assets/logo.png">
+        </div>
         <div id="earth_div"></div>
     </body>
 
