--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <img class="center-fit" src="assets/logo.png">
         </div>
         <div id="earth_div"></div>
+        <div id="signature">
+            A website designed by Kevin Jing, Chris Merino, and Pablo Tayun.
+        </div>
     </body>
 
     <script src="http://www.webglearth.com/v2/api.js"></script>
