adding the moon

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     </head>
 
     <!-- HTML code goes here -->
-    <body onload="initialize()">
+    <body onload="initialize()" onload="initialize1()">
         <div id="logo">
             <img class="center-fit" src="assets/logo.png">
         </div>
         <div id="earth_div"></div>
+        <div id="moon_div"></div>
     </body>
 
     <script src="http://www.webglearth.com/v2/api.js"></script>
     <script src="earth.js"></script>
+    <script src="moon.js"></script>
 
 </html>
