--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <!-- HTML code goes here -->
-    <body onload="initialize()" onload="initialize1()">
+    <body onload="initialize(), initialize1()">
         <div id="logo">
             <img class="center-fit" src="assets/logo.png">
         </div>
