fixed credits text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="earth_div"></div>
         <div id="moon_div"></div>>
         <div id="signature">
-            A website designed by Kevin Jing, Chris Merino, and Pablo Tayun.
+            A website brought to you by Kevin Jing, Chris Merino, and Pablo Tayun.
         </div>
     </body>
 
