popups appear only when zoomed in

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     </head>
 
     <!-- HTML code goes here -->
-    <body onload="initialize(), initializeMoon()">
+    <!--add initializeMoon-->
+    <body onload="initialize()">
         <div id="logo">
             <img class="center-fit" src="assets/logo.png">
         </div>
         <div id="earth_div"></div>
-        <div id="moon_div"></div>>
+        <!--<div id="moon_div"></div>>-->
         <div id="signature">
             A website brought to you by Kevin Jing, Chris Merino, and Pablo Tayun.
         </div>
@@ -22,6 +23,6 @@
 
     <script src="http://www.webglearth.com/v2/api.js"></script>
     <script src="earth.js"></script>
-    <script src="moon.js"></script>
+    <!--<script src="moon.js"></script>-->
 
 </html>
